--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ img {vertical-align: middle;}
 
 <img src="\mail\u\0alt" alt="KOT" width="128" height="128">
 
-
+<a> hhh</a>
 </body>
 </html>
 
